--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   </head>
   <body>
     <div id="map"></div>
-    <script type="text/javascript" src="/home/matthiasdaues/Documents/@projects/melita/01_stack/openlayers/ol/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
