--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melita WebViewer</title>
+      <!-- ol-ext -->
+  <link rel="stylesheet" href="../ol-ext/dist/ol-ext.css" />
+  <script type="text/javascript" src="../ol-ext/dist/ol-ext.js"></script>
     <style>
       @import "node_modules/ol/ol.css";
     </style>
@@ -19,6 +22,29 @@
   </head>
   <body>
     <div id="map"></div>
+    <div class="options" >
+      <ul><li>
+        Operation:
+        <select id="operation" onchange="setOperation(this.value);">
+          <option value="normal">normal</option>
+          <option value="multiply">multiply</option>
+          <option value="screen">screen</option>
+          <option value="overlay">overlay</option>
+          <option value="darken">darken</option>
+          <option value="lighten">lighten</option>
+          <option value="color-dodge">color-dodge</option>
+          <option value="color-burn">color-burn</option>
+          <option value="hard-light">hard-light</option>
+          <option value="soft-light">soft-light</option>
+          <option value="difference">difference</option>
+          <option value="exclusion">exclusion</option>
+          <option value="hue">hue</option>
+          <option value="saturation">saturation</option>
+          <option value="color">color</option>
+          <option value="luminosity">luminosity</option>
+        </select>
+      </li></ul>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
