--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melita WebViewer</title>
       <!-- ol-ext -->
-  <link rel="stylesheet" href="../dist/ol-ext.css" />
-  <script type="text/javascript" src="../dist/ol-ext.js"></script>
+  <link rel="stylesheet" href="/home/matthiasdaues/Documents/@projects/melita/01_stack/openlayers/ol-ext/dist/ol-ext.css" />
+  <script type="text/javascript" src="/home/matthiasdaues/Documents/@projects/melita/01_stack/openlayers/ol-ext/dist/ol-ext.js"></script>
     <style>
       @import "node_modules/ol/ol.css";
     </style>
