--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         margin: 0;
         height: 100%;
         width: 100%;
-        font-family: sans-serif;
-      }
+        font-family: sans-serif;   
+      };
+      .multiply {
+        mix-blend-mode: multiply
+      } 
     </style>
   </head>
   <body>
