--- a/test_multiply.html
+++ b/test_multiply.html
@@ -80,11 +80,15 @@
 
   <script type="text/javascript">
     var osm = new ol.layer.Tile({ source: new ol.source.OSM() });
-    var plan = new ol.layer.Geoportail({ layer: 'GEOGRAPHICALGRIDSYSTEMS.PLANIGNV2' });
-    ol.layer.Geoportail.capabilities['LANDCOVER.CLC18'] = { key: "clc", "server":"https://wxs.ign.fr/geoportail/wmts","layer":"LANDCOVER.CLC18","title":"CORINE Land Cover - 2018","format":"image/png","style":"CORINE Land Cover","queryable":true,"tilematrix":"PM","minZoom":0,"maxZoom":16,"bbox":[-63.37252,-21.475586,55.925865,51.442818],"desc":"<![CDATA[Inventaire biophysique de l'occupation des sols en 2018 en 50 postes pour les DOM et 44 postes pour la Métropole.\nCORINE Land Cover est une base de données d’occupation des sols produite dans le cadre du programme européen d’observation de la Terre Copernicus. Cet inventaire biophysique de l’occupation des terres fournit une information géographique de référence pour 39 États européens. La continuité du programme et la diffusion des données CORINE Land Cover sont pilotées par l'Agence européenne pour l'environnement. Le producteur pour la France est le  Service de la donnée et des études statistiques du ministère chargé de l’écologie.\nL'utilisation de cette base de données permet des applications variées adaptées aux problématiques de l'environnement et à celles de l'aménagement du territoire : production cartographique, exploitation à des fins statistiques ou bien encore analyses géographiques en combinaison avec d'autres bases de données. Outil de connaissance et d'analyse, CORINE Land Cover apporte également une aide à la décision comme instrument de suivi, de surveillance et de gestion de l'environnement, des milieux naturels et de l'aménagement de l'espace.\nLa base de données CORINE Land Cover 2018 a été réalisée à partir de CORINE Land Cover 2012 révisée et de la base des changements 2012-2018.]]>","originators":{"IGN":{"href":"http://www.ign.fr","attribution":"Institut national de l'information géographique et forestière","logo":"https://wxs.ign.fr/static/logos/IGN/IGN.gif","minZoom":0,"maxZoom":16,"constraint":[{"minZoom":0,"maxZoom":16,"bbox":[-63.37252,-21.475586,55.925865,51.442818]}]}}};
-    var clc = new ol.layer.Geoportail({ 
-      layer: 'LANDCOVER.CLC18', 
-      className: 'clc' 
+    const clc = new VectorTileLayer({
+        source: new VectorTileSource({
+        format: new MVT(),
+        url: 
+        'http://localhost:8080/geoserver/gwc/service/tms/1.0.0/melita%3Apotential_coverage_test@EPSG%3A3857@pbf/{z}/{x}/{-y}.pbf',
+        maxZoom: 21,
+        }),
+        style: potentialCoverageStyle, 
+        className: 'clc' 
     });
 
     // The map
@@ -94,7 +98,7 @@
         zoom: 10,
         center: [259580, 6250255]
       }),
-      layers: [ plan, clc ]
+      layers: [ clc ]
     });
 
     map.addControl(new ol.control.LayerSwitcher);
