--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         font-family: sans-serif;   
       }
     </style>
+    <style>
+      .potentialCoverageMVT {
+        mix-blend-mode: multiply;
+      }
+    </style>
   </head>
   <body>
     <div id="map"></div>
