--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     </style>
     <style>
-      .potentialCoverageMVT {
+      .potentialCoverageMVT, .activeCoverageMVT {
         mix-blend-mode: multiply;
       }
     </style>
