--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         mix-blend-mode: multiply;
       }
     </style>
+    <style>
+      .ol-legend li:hover {
+        background-color: rgba(0,60,136,.5);
+      }
+      .ol-saveas {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="map"></div>
