--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         mix-blend-mode: multiply;
       }
     </style>
+    <style>
+      .ol-legend {
+        position: top;
+      }
+    </style>
   </head>
   <body>
     <div id="map"></div>
