--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
     <style>
       .ol-legend {
-        float: right;
+        font-family: Arial, Helvetica, sans-serif;
       }
     </style>
   </head>
