--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </style>
     <style>
       .ol-legend {
-        font-family: Arial, Helvetica, sans-serif;
+        
+        mix-blend-mode: multiply;
+        background-color: rgba(19, 153, 151, 0.1);
       }
     </style>
   </head>
