--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </style>
     <style>
       .ol-legend {
-        
+
         mix-blend-mode: multiply;
-        background-color: rgba(19, 153, 151, 0.1);
+        background-color: rgba(0,60,136,0.3);
       }
     </style>
   </head>
