--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
     </style>
     <style>
       .ol-legend {
-
         mix-blend-mode: multiply;
         background-color: rgba(0,60,136,0.3);
+        bottom: .5em;
+        right: .5em;
+        z-index: 1;
+        max-height: 90%;
+        max-width: 90%;
+        overflow-x: hidden;
+        overflow-y: auto;
+      }
+        ul.ol-legend li.ol-title {
+        text-align: left;
       }
     </style>
   </head>
