--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Melita WebViewer</title>
 
     <!-- ol-ext -->
-    <link rel="stylesheet" href="../ol-ext/dist/ol-ext.css" />
-    <script type="text/javascript" src="../ol-ext/dist/ol-ext.js"></script>
+    <link rel="stylesheet" href="node_modules/ol-ext/dist/ol-ext.css" />
+    <script type="text/javascript" src="node_modules/ol-ext/dist/ol-ext.js"></script>
     <style>
       @import "node_modules/ol/ol.css";
     </style>
