--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <style>
       .ol-legend {
         mix-blend-mode: multiply;
-        background-color: rgba(0,60,136,0.3);
+        background-color: red;
       }
         ul.ol-legend li.ol-title {
         text-align: left;
