--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Mulish:300,400,500,300italic'
+    rel='stylesheet'
+    type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melita WebViewer</title>
-
     <!-- ol-ext -->
     <link rel="stylesheet" href="./node_modules/ol-ext/dist/ol-ext.css" />
     <script type="text/javascript" src="./node_modules/ol-ext/dist/ol-ext.js"></script>
