--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
-    <link href='https://fonts.googleapis.com/css?family=Mulish:300,400,500,300italic'
-    rel='stylesheet'
-    type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Melita WebViewer</title>
     <!-- ol-ext -->
@@ -19,7 +19,7 @@
         margin: 0;
         height: 100%;
         width: 100%;
-        font-family: sans-serif;   
+        font-family: 'Mulish', sans-serif;   
       }
     </style>
     <style>
