--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       .ol-legend {
         mix-blend-mode: multiply;
         background-color: red;
+        font: '8px italic Mulish';
       }
         ul.ol-legend li.ol-title {
         text-align: left;
