--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
     </style>
     <style>
-      .potentialCoverageMVT, .activeCoverageMVT {
+      .indoorOutdoorCoverage, .potentialCoverageMVT, .activeCoverageMVT {
         mix-blend-mode: multiply;
       }
     </style>
